sfSandBoxCode/force-app/main/default/objects/Special_Payment_Request_Recon__c/Special_Payment_Request_Recon__c.object-meta.xml
<CustomObject>
    <description>Special Payment Request Reconciliation Line Items</description>
    <label>Special Payment Request Recon</label>
    <nameField>
        <displayFormat>RECON-{000000}</displayFormat>
        <label>Special Payment Request Recon Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Payment Request Recons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>