sfSandBoxCode/force-app/main/default/objects/Special_Payment_Request_Recon__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Recon Comments</description>
    <inlineHelpText>Recon Comments</inlineHelpText>
    <label>Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>