sfSandBoxCode/force-app/main/default/objects/Special_Payment_Request_Recon__c/fields/GLA__c.field-meta.xml
<CustomField>
    <fullName>GLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GLA</description>
    <inlineHelpText>GLA</inlineHelpText>
    <label>GLA</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>GLA Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>gla</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Special Payment Request Recons (GLA)</relationshipLabel>
    <relationshipName>GLA</relationshipName>
    <type>Lookup</type>
</CustomField>