sfSandBoxCode/force-app/main/default/objects/Special_Payment_Request_Recon__c/fields/KRA_PIN__c.field-meta.xml
<CustomField>
    <fullName>KRA_PIN__c</fullName>
    <label>KRA PIN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>