sfSandBoxCode/force-app/main/default/objects/Special_Payment_Request_Recon__c/fields/Recon_Approved__c.field-meta.xml
<CustomField>
    <fullName>Recon_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recon Approved</description>
    <inlineHelpText>Recon Approved?</inlineHelpText>
    <label>Recon Approved</label>
    <type>Checkbox</type>
</CustomField>