sfSandBoxCode/force-app/main/default/objects/Special_Payment_Request_Recon__c/fields/Special_Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Special_Payment_Request__c</fullName>
    <label>Special Payment Request</label>
    <referenceTo>Special_Procurement__c</referenceTo>
    <relationshipLabel>Special Payment Request Recons</relationshipLabel>
    <relationshipName>Special_Payment_Request_Recons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>