sfSandBoxCode/force-app/main/default/objects/Special_Payment_Request_Recon__c/fields/SPR_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>SPR_Reconciliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPR Reconciliation</label>
    <referenceTo>Renconciling_Object__c</referenceTo>
    <relationshipLabel>Special Payment Request Recons</relationshipLabel>
    <relationshipName>Special_Payment_Request_Recons</relationshipName>
    <type>Lookup</type>
</CustomField>