sfSandBoxCode/force-app/main/default/objects/Special_Payment_Request_Recon__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>