sfSandBoxCode/force-app/main/default/objects/Special_Payment_Request_Recon__c/fields/Total_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Total_Reconciled__c</fullName>
    <formula>Item_Amount__c  +  Transaction_Charge__c +  VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Reconciled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>