sfSandBoxCode/force-app/main/default/objects/Special_Payment_Request_Recon__c/fields/Transaction_Charge__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Charge__c</fullName>
    <label>Transaction Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>